--- a/nature-inspiration/nat-insp-styles.css
+++ b/nature-inspiration/nat-insp-styles.css
@@ -1,16 +1,25 @@
-
-
 #nature_box {
-    padding: 15px;
-    border-radius: 5px;
-    border: 2px solid #ddd;
-    background-color: #fff;
     display: none;
     position: fixed;
-    top: 7%;
-    left: 35%;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
     z-index: 500;
-    max-height: 95%;
+    background-color: rgba(0,0,0,0.5);
+}
+
+#nature_box div {
+    padding: 15px;
+    border-radius: 5px;
+    background-color: #fff;
+    margin: 2% auto;
+    z-index: 500;
+    max-width: 450px;
+    overflow: hidden;
+    -webkit-box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.75);
 }
 
 #nature_box .image_holder {
@@ -20,10 +29,18 @@
     margin-right: auto;
 }
 
-#nature_box p {
+#nature_box p.description {
     float: left;
+    color: #343434;
+}
+
+#nature_box p.attribution {
+    position: absolute;
+    color: #fff;
+    background-color: #000;
 }
 
 #nature_box .close {
     float: right;
+    margin-left: 5px;
 }
